# ml-sys

./: .gitignore  .pre-commit-config.yaml  Agents.md  Dockerfile  HOW_TO_TEST.md  MLOPS_ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  TROUBLESHOOTING.md  check_system.sh  docker-compose.yml  fix_env.sh  pyproject.toml  run.sh  script.sh  setup.sh  test_e2e.sh
.github/workflows/: cd.yml  ci.yml  docker.yml  retrain.yml  test.yml
artifacts/: xgb_lead_scoring.joblib
config/: config.schema.json  config.yaml
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml
docs/: improvement-plan.md  presentation-script.md
models/: best.joblib
monitoring/: prometheus.yml
monitoring/grafana/: dashboard.json
notebooks/: 001_eda.ipynb  002_feature-engineering.ipynb  003_modeling.ipynb  eda.ipynb
scripts/: evaluate.py  register_model.py  serve.py  train.py  train_xgb_lead_scoring.py
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: inference.py
src/app/core/: config.py
src/app/data/: base_loader.py  dataframe_loader.py
src/app/features/: pipeline.py
src/app/ml/: evaluation.py  trainer.py
src/app/schemas/: inference.py  model.py
src/app/serving/: predictor.py
src/mlsys/: __init__.py
src/mlsys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mlsys/api/: __init__.py  app.py  middleware.py
src/mlsys/api/routes/: __init__.py  health.py  inference.py
src/mlsys/config/: __init__.py  loader.py  paths.py  settings.py
src/mlsys/core/: __init__.py  config.py  protocols.py
src/mlsys/data/: __init__.py  base.py  loader.py  loaders.py  registry.py
src/mlsys/evaluation/: __init__.py  evaluator.py  metrics.py
src/mlsys/features/: __init__.py  pipeline.py  transformer.py  transformers.py
src/mlsys/inference/: registry.py  schemas.py  service.py
src/mlsys/models/: __init__.py  base.py  factory.py  registry.py  sklearn_models.py  xgboost.py
src/mlsys/serving/: __init__.py  loader.py  predictor.py
src/mlsys/tracking/: __init__.py  mlflow_tracker.py  tracker.py
src/mlsys/training/: __init__.py  callbacks.py  cli.py  model.py  pipeline.py  stub_data.py  trainer.py
src/mlsys/ui/: app.py
tests/: conftest.py  test_data_loaders.py
tests/api/: test_inference_api.py  test_model_info.py
tests/fixtures/: sample_data.py
tests/inference/: test_service.py
tests/integration/: test_api.py  test_training_pipeline.py
tests/serving/: test_predictor.py
tests/training/: test_feature_pipeline.py  test_pipeline.py  test_trainer.py
tests/unit/: test_config.py  test_data.py  test_features.py  test_models.py  test_serving.py  test_training.py
