[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsys"
version = "0.1.0"
description = "Lead scoring ML system"
authors = [{name = "Ashwin"}]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "xgboost",
    "fastapi",
    "uvicorn",
    "pydantic",
    "joblib",
]

[project.optional-dependencies]
ui = [
    "streamlit",
]

dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
