[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsys"
version = "0.1.0"
description = "Lead scoring ML system"
authors = [{name = "Ashwin"}]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "xgboost>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "prometheus-client>=0.19.0",
    "mlflow>=2.9.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.28.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mlsys", "app"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["mlsys", "app"]
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--disable-warnings",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
